# api/api-ou-service.js
@@ -274,6 +274,23 @@ exports.favorableFullNames = async (req, res) => {
     }
 };
 
+exports.updateParentUnits = async (req, res) => {
+    try {
+        const url = `${apiOuServiceHost}/api/edge/parent/units`;
+        const response = await fetch(url, {
+            method: 'PUT',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(req.body)
+        });
+        return res.status(response.status).json(await response.json());
+    } catch (err) {
+        console.log(err);
+        res.status(500).send(err);
+    }
+};
+
 exports.updateNodeNameAttributes = async (req, res) => {
     try {
         const url = `${apiOuServiceHost}/api/node/${req.params.id}/attributes/names`;
